--- a/main.html
+++ b/main.html
@@ -6,8 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="text-align:center">
 	<!-- the entire body must be written by student -->
+	<span style="width:200px;height:200px;text-align:center;background-color:lightblue;color:purple">
+		This is center
+	</span>
     <script type="text/javascript" src="./script.js">
 </script>
 
