--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body style="text-align:center">
 	<!-- the entire body must be written by student -->
-	<span style="width:200px;height:200px;text-align:center;background-color:lightblue;color:purple">
+	<div>
 		This is center
-	</span>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
