--- a/main.html
+++ b/main.html
@@ -8,8 +8,10 @@
 
 <body style="text-align:center">
 	<!-- the entire body must be written by student -->
-	<div>
+	<div id="container">
+		<div id="box">
 		This is center
+	</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
