--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body style="text-align:center">
 	<!-- the entire body must be written by student -->
-	<div id="box">
+	<div>
 		This is center
 	</div>
     <script type="text/javascript" src="./script.js">
