--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="text-align:center">
+<body>
 	<!-- the entire body must be written by student -->
 	<div>
 		This is center
